--- a/Validation.html
+++ b/Validation.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-  <h2>User Registration Form</h2>
+  <h2>Validation Form</h2>
 
   <form id="myForm" onsubmit="return validateForm()">
     <label>Name:</label>
@@ -100,7 +100,7 @@
         isValid = false;
       }
 
-      return isValid; // Only submit form if all validations are passed
+      return isValid;
     }
   </script>
 
